force-app/main/default/objects/Portal_Activity_Log__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Portal Activity Logs</relationshipLabel>
    <relationshipName>Portal_Activity_Logs</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>