force-app/main/default/objects/Portal_Activity_Log__c/fields/Activity_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Activity_Timestamp__c</fullName>
    <label>Activity Timestamp</label>
    <type>DateTime</type>
</CustomField>