force-app/main/default/objects/Portal_Activity_Log__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Portal Activity Logs</relationshipLabel>
    <relationshipName>Portal_Activity_Logs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <required>true</required>
    <type>MasterDetail</type>
</CustomField>