force-app/main/default/objects/Portal_Activity_Log__c/fields/Record_ID__c.field-meta.xml
<CustomField>
    <fullName>Record_Id__c</fullName>
    <label>Record ID</label>
    <length>18</length>
    <type>Text</type>
    <description>Salesforce ID of record that was accessed (Invoice, Quote, etc.)</description>
</CustomField>