force-app/main/default/objects/Portal_Activity_Log__c/fields/Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Record_Type__c</fullName>
    <label>Record Type</label>
    <length>100</length>
    <type>Text</type>
    <description>Object type (Invoice, Quote, Payment, etc.)</description>
</CustomField>